HVAC Backup 2/objects/Knowledge__kav(1).object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Answer__c</fullName>
        <inlineHelpText>Use this field to document the answer to the question discussed in the Knowledge Article.</inlineHelpText>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Check_points__c</fullName>
        <label>Check points</label>
        <length>50072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Protection__c</fullName>
        <label>Fault/Protection</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_URL__c</fullName>
        <label>Knowledge URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Audience__c</fullName>
        <inlineHelpText>Use this field to identify who should follow or execute this procedure.  If you have a set list of people or groups, you could convert it to a pre-defined picklist.</inlineHelpText>
        <label>Procedure Audience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure_Purpose__c</fullName>
        <inlineHelpText>Use this field to describe the purpose of this procedure.</inlineHelpText>
        <label>Procedure Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure_Steps__c</fullName>
        <inlineHelpText>Use this field to track the ordered procedure steps.</inlineHelpText>
        <label>Procedure Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure_Warnings__c</fullName>
        <inlineHelpText>Use this field to capture warnings and caveats that a user should know before following this procedure.  For example, you may want to include potential impacts or preparation needed before following this procedure.</inlineHelpText>
        <label>Procedure Warnings</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>Use this field to document the question being answered by this article.  Include important keywords to help users find this article.</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>DIY_CC_Customer_Script</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.DIY_CC_Customer_Script</value>
        </filters>
        <label>DIY CC Customer Script</label>
    </listViews>
    <listViews>
        <fullName>Error</fullName>
        <columns>Question__c</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>IS_CHANNEL_CSP</columns>
        <columns>IS_CHANNEL_PRM</columns>
        <columns>Procedure_Steps__c</columns>
        <columns>Procedure_Warnings__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Error</value>
        </filters>
        <label>Error</label>
    </listViews>
    <listViews>
        <fullName>FAQ</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.FAQ</value>
        </filters>
        <label>FAQ</label>
    </listViews>
    <listViews>
        <fullName>Procedure</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Procedure</value>
        </filters>
        <label>Procedure</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>Procedure_Audience__c</columns>
        <columns>Procedure_Purpose__c</columns>
        <columns>Procedure_Steps__c</columns>
        <columns>Procedure_Warnings__c</columns>
        <columns>Answer__c</columns>
        <columns>Question__c</columns>
        <columns>PUBLISH_STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>Product_Name__c</columns>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>IS_CHANNEL_PRM</columns>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>Answer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ABSTRACT</columns>
        <columns>LANGUAGE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>DIY_CC_Customer_Script</fullName>
        <active>true</active>
        <label>DIY CC Customer Script</label>
    </recordTypes>
    <recordTypes>
        <fullName>Error</fullName>
        <active>true</active>
        <label>Error</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This can be used for simple question and answer articles.</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Procedure</fullName>
        <active>true</active>
        <description>This can be used for defining how to do something or the steps of a procedure.</description>
        <label>Procedure</label>
    </recordTypes>
</CustomObject>